force-app/main/default/objects/Time_Card__c/Time_Card__c.object-meta.xml
<CustomObject>
    <label>Time Card</label>
    <nameField>
        <label>Time Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>