force-app/main/default/objects/Time_Card__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>