force-app/main/default/objects/Time_Card__c/fields/Reject_Date__c.field-meta.xml
<CustomField>
    <fullName>Reject_Date__c</fullName>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>