force-app/main/default/objects/Time_Card__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>