force-app/main/default/objects/Time_Card__c/fields/Submit_Status__c.field-meta.xml
<CustomField>
    <fullName>Submit_Status__c</fullName>
    <label>Submit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>