force-app/main/default/objects/Time_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week_Begin__c</columns>
    <columns>User__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Submit_Status__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>